--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
-FROM node:14
+FROM node:20
 
+# Install dockerize
 RUN apt-get update && apt-get install -y wget \
     && wget -O /usr/local/bin/dockerize https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz \
     && chmod +x /usr/local/bin/dockerize
@@ -8,10 +9,10 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install --no-optional
 
 COPY . .
 
 EXPOSE 4000
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
